macros/tests/ui/unknown_sql_table_field_key.rs
use easy_sql_macros::Table;

#[derive(Table)]
struct BadTableFieldAttr {
    #[sql(primray_key)]
    id: i32,
}

fn main() {}
